--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
